--- a/CV Batman/index.html
+++ b/CV Batman/index.html
@@ -45,7 +45,7 @@
                     <dd>Atrapé a Gatubela a joker a Victor Fries lo dejé porque se me congeló la capa</dd>
                     <dt class="en-negrita">1962-1965: </dt>
                     <dd>Aprendiz de superhéroes</dd>
-                    <dd>Hice pasantía con Superman. Opté por usar mascara porque no pude aprender a peinarme el rul</dd>              
+                    <dd>Hice pasantía con Superman. Opté por usar mascara porque no pude aprender a peinarme el rulo</dd>              
             </section>
         </Section>
     </main>
