--- a/Lemon Pie/index.html
+++ b/Lemon Pie/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Práctica</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header><a href="index.html"><img src="img/front1.png" alt="logo"></a></header>
@@ -11,8 +12,8 @@
     </header> 
     <main>
         <img src="img/lemon-pie1.png" alt="lemon pie">
-        <section><h1>El clásico Lemon Pie</h1>
-            <p>Es el preferido de los que les gusta lo dulce pero no lo empalagoso. El lemon pie es una tarta, es decir, una base de masa y un relleno. Como su nombre lo indica, está hecha con jugo de limón, azúcar y huevos. Todo eso mezclado hace el famoso custard, el relleno cremoso amarillo que es tan típico del lemon pie.</p>
+        <section class="banner"><h1>El clásico Lemon Pie</h1>
+            <p>Es el preferido de los que les gusta lo dulce pero no lo empalagoso. <strong>El lemon pie es una tarta</strong>, es decir, una base de masa y un relleno. Como su nombre lo indica, está hecha con jugo de limón, azúcar y huevos. Todo eso mezclado hace el famoso custard, el relleno cremoso amarillo que es tan típico del lemon pie.</p>
         </section>
         <section>
             <h2>Ingredientes</h2>
