CV Manuel Ramos

--- a/CV Ramos Manuel/index.html
+++ b/CV Ramos Manuel/index.html
@@ -20,8 +20,8 @@
             <section class="cuadroDer">
             
                 <br>
-                <h3><a href="/estudios.html">FORMACION ACADEMICA</a></h3>
-                <h3><a href="/experiencia.html">EXPERIENCIA LABORAL</a></h3>
+                <h3><a href="estudios.html">FORMACION ACADEMICA</a></h3>
+                <h3><a href="experiencia.html">EXPERIENCIA LABORAL</a></h3>
                 <section class="interior_cuadroDer">
                 <p>Estimados/as Sres/as.: </p>
                 <p>Estoy en un momento de cambio laboral, con una buena trayectoria profesional y una sólida formación. </p>
@@ -30,7 +30,7 @@
                 <p>Dada la profesionalidad de su empresa, cuya línea me resulta muy interesante, les ruego consideren, a la vista del currículum vitae que les adjunto, la posibilidad de una colaboración profesional.</p>
                 <p>En caso de que lo consideren oportuno, les agradecería mantuviésemos una entrevista para poder ampliar los datos que aparecen en el currículum vitae, así como todo aquello que consideren de su interés.</p>
                 <p>Quedando a la espera de sus noticias, me despido atentamente</p>
-                <img src="/img/firma.png" alt="firma">
+                <img src="img/firma.png" alt="firma">
                 <p>Ramos Silveyra Mauel</p>
               
             </section>
