--- a/CV Ramos Manuel/estudios.html
+++ b/CV Ramos Manuel/estudios.html
@@ -19,8 +19,8 @@
         <section class="cuadros">
             <section class="cuadroDer">
                 <br>
-                <h3><a href="/index.html">CARTA PRESENTACION</a></h3>
-                <h3><a href="/experiencia.html">EXPERIENCIA LABORAL</a></h3>
+                <h3><a href="index.html">CARTA PRESENTACION</a></h3>
+                <h3><a href="experiencia.html">EXPERIENCIA LABORAL</a></h3>
                 <section class="interior_cuadroDer">
                         <dl>
                             <br><dt class="en-negrita">Estudios Secundarios </dt>
