--- a/CV Ramos Manuel/experiencia.html
+++ b/CV Ramos Manuel/experiencia.html
@@ -19,8 +19,8 @@
         <section class="cuadros">
             <section class="cuadroDer">
                 <br>
-                <h3><a href="/index.html">CARTA PRESENTACION</a></h3>
-                <h3><a href="/estudios.html">FORMACION ACADEMICA</a></h3>
+                <h3><a href="index.html">CARTA PRESENTACION</a></h3>
+                <h3><a href="estudios.html">FORMACION ACADEMICA</a></h3>
                 <section class="interior_cuadroDer">
                         <dl>
                             <br><dt class="en-negrita">ASESOR COMERCIAL</dt>
