--- a/CV Ramos Manuel/estudios.html
+++ b/CV Ramos Manuel/estudios.html
@@ -1,73 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV Ramos Manuel</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="css/estilo.css">
 </head>
+
 <body>
     <header>
-        <section class="encabezado">
-            <h1><br>Ramos <br>Silveyra <br>Manuel</h1>
-            <h5>IT trainee</h5><br>
-        </section>
+        <h1><br>Ramos <br>Silveyra <br>Manuel</h1>
+        <h5>IT trainee</h5><br>
     </header>
     <main>
         <section class="cuadros">
-            <section class="cuadroDer">
-                <br>
-                <h3><a href="index.html">CARTA PRESENTACION</a></h3>
-                <h3><a href="experiencia.html">EXPERIENCIA LABORAL</a></h3>
-                <section class="interior_cuadroDer">
-                        <dl>
-                            <br><dt class="en-negrita">Estudios Secundarios </dt>
-                            <dd>IPEM 247 C.A. CASSAFFOUSTH, CÓRDOBA</dd>
-                            <dd>Secundario 1º año | 1999</dd>
-                            <dd>INSTITUTO SANTA ROSA, SAN LUIS</dd>
-                            <dd>Secundario 2º a 6º año | 2000 - 2004</dd>
-                            <br><dt class="en-negrita">Estudios Universitarios</dt>
-                            <dd>UNIVERSIDAD TECNOLÓGICA NACIONAL CÓRDOBA</dd>
-                            <dd>Ingeniería Industrial | 2005 – 2009</dd>
-                            <dd>UNIVERSIDAD EMPRESARIAL SIGLO 21</dd>
-                            <dd>Licenciatura en Sistemas de Información | 2020 – 2021</dd>
-                            <br><dt class="en-negrita">Estudios Complementarios</dt>
-                            <dd>INSTITUTO CÓRDOBA</dd>
-                            <dd>Curso de Inglés de lecto-comprensión | 1998 – 1999</dd>
-                            <dd>UNIVERSIDAD TECNOLÓGICA NACIONAL CÓRDOBA</dd>
-                            <dd>Curso Avanzado de paquete Office | 2005 – 2006</dd>
-                            <dd>UNIVERSIDAD TECNOLÓGICA NACIONAL CÓRDOBA</dd>
-                            <dd>Curso de Inglés Técnico de lecto-comprensión | 2005 – 2006</dd>
-                            <dd>UNIVERSIDAD TECNOLÓGICA NACIONAL CÓRDOBA</dd>
-                            <dd>Curso de Liderazgo</dd>
-                            <dd>¿Cómo Liderar dentro de una Empresa? | 2005 – 2006</dd>
-                            <dd>FREECODECAMP</dd>
-                            <dd>Diseño web adaptable | 2020</dd>
-                            <dd>FREECODECAMP</dd>
-                            <dd>Estructuras de datos y algoritmos de JavaScript | 2021</dd>
-                            <dd>GRASSHOPPER</dd>
-                            <dd>Fundamentos de la codificación | 2021</dd>
-                            <dd>GRASSHOPPER</dd>
-                            <dd>Fundamentos II de la codificación | 2021</dd>
-                            <dd>NEXT U</dd>
-                            <dd>Fundamentos de programación en Python | cursando</dd>
-                            <dd>NEXT U</dd>
-                            <dd>GIT | cursando</dd>
-                            <dd>NEXT U</dd>
-                            <dd>Tecnologías Web Front End | cursando</dd>
-                            <dd>DIGITAL HOUSE</dd>
-                            <dd>Certified Tech Developer | cursando</dd>
-                        </dl>
-                </section>
-            </section>
-            <section class="cuadroIzq">
-                <section class="interior_cuadroIzq">
-                    <img src="img/Foto perfil.jpeg" alt="Foto">
+            <section class="cuadro1">
+                <section class="cuadro1Interior">
+                    <img src="img/Foto perfil.jpeg" alt="Foto" class="img1">
                     <h4 class="en-negrita">PERFIL PERSONAL</h4>
                     <hr>
-                    <p>Me presento como una persona activa,responsable, creativa, flexible, orientadaal logro de resultados y a la resolución yevolución constante en las tareasasignadas.</p>
+                    <p>Me presento como una persona activa, responsable, creativa, flexible, orientada al logro de
+                        resultados y a la resolución y evolución constante en las tareas asignadas.</p>
                     <h4 class="en-negrita">CUALIDADES</h4>
                     <hr>
                     <ul>
@@ -80,42 +38,90 @@
                         <li>Iniciativa</li>
                         <li>Capacidad para manejar conflictos</li>
                     </ul>
-                    <h4 >DATOS PERSONALES</h4>
+                    <h4 class="en-negrita">DATOS PERSONALES</h4>
                     <hr>
-                        <dl>
-                            <dt class="en-negrita">Estado civil: </dt>
-                            <dd>Soltero</dd>
-                            <dt class="en-negrita">Carnet de conducir:</dt>
-                            <dd>B1</dd>
-                            <dt class="en-negrita">Hobbies:</dt>
-                            <dd>Rugby</dd>
-                            <dd>Programación</dd>
-                            <dd>Videojuegos</dd>
-                            <dd>Series</dd>
-                            <dt class="en-negrita">Idiomas:</dt>
-                            <dd>Inglés intermedio</dd>
-                            <dt class="en-negrita">Lenguajes:</dt>
-                            <dd>JavaScript</dd>
-                            <dd>Python</dd>
-                            <dd>HTML / CSS</dd>
-                            <br>
-                        </dl>
-               </section>
-            </section>   
+                    <dl>
+                        <dt class="en-negrita">Estado civil: </dt>
+                        <dd>Soltero</dd>
+                        <dt class="en-negrita">Carnet de conducir:</dt>
+                        <dd>B1</dd>
+                        <dt class="en-negrita">Hobbies:</dt>
+                        <dd>Rugby</dd>
+                        <dd>Programación</dd>
+                        <dd>Videojuegos</dd>
+                        <dd>Series</dd>
+                        <dt class="en-negrita">Idiomas:</dt>
+                        <dd>Inglés intermedio</dd>
+                        <dt class="en-negrita">Lenguajes:</dt>
+                        <dd>JavaScript</dd>
+                        <dd>Python</dd>
+                        <dd>HTML / CSS</dd>
+                        <br>
+                    </dl>
+                </section>
+            </section>
+
+            <section class="cuadro2">
+                <br>
+                <div class="links">
+                    <h3><a href="index.html">CARTA PRESENTACION</a></h3>
+                    <h3><a href="experiencia.html">EXPERIENCIA LABORAL</a></h3>
+                </div>
+                <section>
+                    <dl>
+                        <br>
+                        <dt class="en-negrita">Estudios Secundarios </dt>
+                        <dd>IPEM 247 C.A. CASSAFFOUSTH, CÓRDOBA</dd>
+                        <dd>Secundario 1º año | 1999</dd><br>
+                        <dd>INSTITUTO SANTA ROSA, SAN LUIS</dd>
+                        <dd>Secundario 2º a 6º año | 2000 - 2004</dd><br>
+                        <br>
+                        <dt class="en-negrita">Estudios Universitarios</dt>
+                        <dd>UNIVERSIDAD TECNOLÓGICA NACIONAL CÓRDOBA</dd>
+                        <dd>Ingeniería Industrial | 2005 – 2009</dd><br>
+                        <dd>UNIVERSIDAD EMPRESARIAL SIGLO 21</dd>
+                        <dd>Licenciatura en Sistemas de Información | 2020 – 2021</dd><br>
+                        <br>
+                        <dt class="en-negrita">Estudios Complementarios</dt>
+                        <dd>INSTITUTO CÓRDOBA</dd>
+                        <dd>Curso de Inglés de lecto-comprensión | 1998 – 1999</dd><br>
+                        <dd>UNIVERSIDAD TECNOLÓGICA NACIONAL CÓRDOBA</dd>
+                        <dd>Curso Avanzado de paquete Office | 2005 – 2006</dd><br>
+                        <dd>UNIVERSIDAD TECNOLÓGICA NACIONAL CÓRDOBA</dd>
+                        <dd>Curso de Inglés Técnico de lecto-comprensión | 2005 – 2006</dd><br>
+                        <dd>UNIVERSIDAD TECNOLÓGICA NACIONAL CÓRDOBA</dd>
+                        <dd>Curso de Liderazgo</dd>
+                        <dd>¿Cómo Liderar dentro de una Empresa? | 2005 – 2006</dd><br>
+                        <dd>FREECODECAMP</dd>
+                        <dd>Diseño web adaptable | 2020</dd><br>
+                        <dd>FREECODECAMP</dd>
+                        <dd>Estructuras de datos y algoritmos de JavaScript | 2021</dd><br>
+                        <dd>GRASSHOPPER</dd>
+                        <dd>Fundamentos de la codificación | 2021</dd><br>
+                        <dd>GRASSHOPPER</dd>
+                        <dd>Fundamentos II de la codificación | 2021</dd><br>
+                        <dd>NEXT U</dd>
+                        <dd>Fundamentos de programación en Python | cursando</dd><br>
+                        <dd>NEXT U</dd>
+                        <dd>GIT | cursando</dd><br>
+                        <dd>NEXT U</dd>
+                        <dd>Tecnologías Web Front End | cursando</dd><br>
+                        <dd>DIGITAL HOUSE</dd>
+                        <dd>Certified Tech Developer | cursando</dd>
+                    </dl>
+                </section>
+            </section>
         </section>
     </main>
-    
-    <footer>
-        
-        <i class="fas fa-home"></i> San Juan 1298, Córdoba</i>
-        <a href="mailto:ramossilveyramanuel@gmail.com"><i class="fas fa-envelope"> ramossilveyramanuel@gmail.com </i></a>
+    <footer><i class="fas fa-home"></i> San Juan 1298, Córdoba</i>
+        <a href="mailto:ramossilveyramanuel@gmail.com"><i class="fas fa-envelope"> ramossilveyramanuel@gmail.com
+            </i></a>
         <a><i class="fas fa-phone-square-alt"> 0351-152336962 </i><br>
-        <a><a href="https://www.linkedin.com/in/manuel-ramossilveyra/"> <i class="fab fa-linkedin">  Manuel-RamosSilveyra </i></a>
-        <a href="https://www.reddit.com/user/Manuel_RamosSilveyra"><i class="fab fa-reddit-square"> Manuel_RamosSilveyra </i>
-        <a href="https://github.com/RamosManuel/Front-End"><i class="fab fa-github-square"> RamosManuel </i></a>
-
+            <a><a href="https://www.linkedin.com/in/manuel-ramossilveyra/"> <i class="fab fa-linkedin">
+                        Manuel-RamosSilveyra </i></a>
+                <a href="https://www.reddit.com/user/Manuel_RamosSilveyra"><i class="fab fa-reddit-square">
+                        Manuel_RamosSilveyra </i>
+                    <a href="https://github.com/RamosManuel/Front-End"><i class="fab fa-github-square"> RamosManuel
+                        </i></a>
     </footer>
 </body>
-</html>
-
-
